# binrw-versioned

./: Cargo.toml  LICENSE-MIT
src/: lib.rs
