[package]
name = "binrw-versioned"
version = "0.1.0"
edition = "2021"
description = "Helper proc-macros for generating backwards-compatible structs for binrw"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.47"
quote = "1.0.21"
semver = "1.0.14"
syn = { version = "1.0.105", features = ["full"] }


[lib]
proc-macro = true
